kubernetes/apps/immich-test/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: immich-test
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: immich-test
spec:
  selector:
    app: redis
  ports:
    - port: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich-test
spec:
  selector:
    app: immich-server
  ports:
    - port: 2283
---
apiVersion: v1
kind: Service
metadata:
  name: immich-ml
  namespace: immich-test
spec:
  selector:
    app: immich-ml
  ports:
    - port: 3003
